# pyvcd

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  requirements.txt  vcd.common.rst  vcd.gtkw.rst  vcd.reader.rst  vcd.rst  vcd.writer.rst
tests/: conftest.py  test_gtkw.py  test_reader.py  test_writer.py
vcd/: __init__.py  common.py  gtkw.py  reader.py  writer.py
