[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ["py36"]
skip-string-normalization = true
exclude = '''
(
    ^\/\..*$
  | \.egg-info
  | _build
  | build
  | dist
  | htmlcov
)
'''
