[metadata]
name = pyvcd
author = Peter Grayson
author_email = pete@jpgrayson.net
description = Python VCD file support
long_description = file: README.rst, LICENSE.txt
url = http://pyvcd.readthedocs.io/en/latest/
download_url = https://github.com/SanDisk-Open-Source/pyvcd
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
include_package_data = True
zip_safe = False
setup_requires =
    setuptools_scm
python_requires = >= 3.6
packages = vcd

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-glob='*.rst'

[flake8]
max-line-length = 88
ignore = E203, E501, W503
exclude = build/, .*/

[isort]
force_grid_wrap = 0
from_first = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True
skip_glob = .*
