[metadata]
name = pyvcd
author = Peter Grayson
author_email = pete@jpgrayson.net
description = Python VCD file support
long_description = file: README.rst, LICENSE.txt
long_description_content_type = text/x-rst
url = http://pyvcd.readthedocs.io/en/latest/
download_url = https://github.com/westerndigitalcorporation/pyvcd
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
include_package_data = True
zip_safe = False
python_requires = >= 3.6
packages = vcd

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-glob='*.rst'

[flake8]
max-line-length = 88
ignore = E203, E501, W503
exclude = build/, .*/

[isort]
profile = black
skip_glob = .*
